# projinit

./: .gitignore  LICENSE  README.md  pyproject.toml
projinit/: license.py  main.py
