[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "projinit"
version = "0.0.5"
requires-python = ">=3.6.0"
description = "Tool to initialize python projects"
readme = "README.md"
dependencies = []

[tool.setuptools.packages.find]
# All the following settings are optional:
# where = ["src"]  # ["."] by default
include = ["projinit*"]  # ["*"] by default
#exclude = ["projinit.tests*"]  # empty by default
# namespaces = false  # true by default

[project.scripts]
projinit = "projinit.main:main"
